[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

#[tool.poetry]
#name = "ds-ds-abc"
#version = "0.1.0"
#description = "A short description of the project."
#authors = "Your name (or your organization/company/team)"
#readme = "README.md"
#
#[tool.poetry.dev-dependencies]
#coverage = "7.0.1"
#pre-commit = "3.0.0"
#pytest = "7.2.1"
#
#[tool.poetry.dependencies]
